# Projects

./: 01-Dummy-Model.ipynb  02-XGBoost_Without_FE.ipynb  03-XGBoost_With_FE.ipynb  04-XGBoost_With_Optuna.ipynb  05-LightBGM_With_FE.ipynb  06-LightBGM_With_Focal_Loss.ipynb  11-Pycaret.ipynb  13-AutoGluon-Zero-Shot-Optimization.ipynb  14-AutoXGB.ipynb  16-XGB-Stacked.ipynb  README.md  Temp-LightBGM.ipynb  Temp-XGBoost_FE_obj_Recall.ipynb  Temp-XGBoost_With_Custom_Loss.ipynb  Vinyl Record Search Popularity.Rmd  WELLBOT_FINAL_CODE.ipynb  learning_curve_data.csv  mlflow.db  new_mlflow.db  stack_aid_lgbm.csv  stack_lgbm_test.csv
02-EDA/: 01-Univariate-Analysis.ipynb  (+2 more)
Multi Class Prediction of Obesity Risk/: README.md  pyproject.toml
Multi Class Prediction of Obesity Risk/02-EDA/: 04-EDA-PCA-KMedians-Study_VF.ipynb
Multi Class Prediction of Obesity Risk/03-Experiments/: 06-LightBGM_Without_FE.ipynb  12-AutoGluon.ipynb  17-LightBGM_Final.ipynb  Experiments.md  Untitled-1.ipynb  new_mlflow.db  stack_lgbm_train.csv  stack_lgbm_val.csv
Multi Class Prediction of Obesity Risk/03-Experiments/Utils/: FeatureEngineering.py  libraries.py  utils.py
Multi Class Prediction of Obesity Risk/03-Experiments/catboost_info/: learn_error.tsv  time_left.tsv
Multi Class Prediction of Obesity Risk/08-Final-Models/: v3.ipynb
Multi Class Prediction of Obesity Risk/10-Assets-For-Documentation/: 2_Poetry-CLI-Script.txt
Multi Class Prediction of Obesity Risk/11-Docker/: docker_api.py  helper.py  notebook.ipynb
Multi Class Prediction of Obesity Risk/Streamlit/: app.py
(+46 files in other folders)
