[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["arhamanalytics <arhamanwar11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
numpy = "^1.26.4"
lightgbm = "^4.3.0"
fastapi = "^0.110.2"
pydantic = "^2.7.0"
uvicorn = "^0.29.0"
mlflow = "^2.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false
